--- a/Store.API/Store.API.csproj
+++ b/Store.API/Store.API.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\Infrastructure\Presentation\Presentation.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\images\products\" />
+  </ItemGroup>
+
 </Project>
